// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <InputSearch /> should match loading SnapShot 1`] = `
<Input
  ariaDescribedBy={null}
  ariaLabel={null}
  className=""
  clear={false}
  clearAriaLabel={null}
  containerSize=""
  defaultValue=""
  disabled={false}
  helpText=""
  htmlId={null}
  id="1"
  inputAfter={null}
  inputBefore={
    <Spinner
      className=""
      color="black"
      percentage={null}
      showCheck={false}
      showPercentage={false}
      size={20}
    />
  }
  inputClassName=""
  inputRef={null}
  inputSize=""
  isFilled={false}
  label=""
  messageArr={Array []}
  multiline={false}
  name="test"
  nestedLevel={0}
  onChange={null}
  onDoneEditing={null}
  onFocus={null}
  onKeyDown={null}
  onMouseDown={null}
  placeholder=""
  readOnly={false}
  secondaryLabel=""
  shape=""
  type="text"
  value=""
/>
`;

exports[`tests for <InputSearch /> should match normal SnapShot 1`] = `
<Input
  ariaDescribedBy={null}
  ariaLabel={null}
  className=""
  clear={false}
  clearAriaLabel={null}
  containerSize=""
  defaultValue=""
  disabled={false}
  helpText=""
  htmlId={null}
  id="1"
  inputAfter={null}
  inputBefore={
    <Icon
      append={false}
      ariaLabel={null}
      buttonClassName=""
      buttonProps={null}
      className=""
      color=""
      description=""
      name="search_20"
      onClick={null}
      prepend={false}
      size={null}
      sizeOverride={false}
      style={null}
      title=""
      type=""
    />
  }
  inputClassName=""
  inputRef={null}
  inputSize=""
  isFilled={false}
  label=""
  messageArr={Array []}
  multiline={false}
  name="test"
  nestedLevel={0}
  onChange={null}
  onDoneEditing={null}
  onFocus={null}
  onKeyDown={null}
  onMouseDown={null}
  placeholder=""
  readOnly={false}
  secondaryLabel=""
  shape=""
  type="text"
  value=""
/>
`;

exports[`tests for <InputSearch /> should match pill SnapShot 1`] = `
<Input
  ariaDescribedBy={null}
  ariaLabel={null}
  className=""
  clear={false}
  clearAriaLabel={null}
  containerSize=""
  defaultValue=""
  disabled={false}
  helpText=""
  htmlId={null}
  id="1"
  inputAfter={null}
  inputBefore={
    <Icon
      append={false}
      ariaLabel={null}
      buttonClassName=""
      buttonProps={null}
      className=""
      color=""
      description=""
      name="search_20"
      onClick={null}
      prepend={false}
      size={null}
      sizeOverride={false}
      style={null}
      title=""
      type=""
    />
  }
  inputClassName=""
  inputRef={null}
  inputSize=""
  isFilled={false}
  label=""
  messageArr={Array []}
  multiline={false}
  name="test"
  nestedLevel={0}
  onChange={null}
  onDoneEditing={null}
  onFocus={null}
  onKeyDown={null}
  onMouseDown={null}
  placeholder=""
  readOnly={false}
  secondaryLabel=""
  shape="pill"
  type="text"
  value=""
/>
`;
